# PyPDFForm

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .ruff.toml  .travis.yml  404.html  AGENTS.md  CONTRIBUTING  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  Supplier Evaluation Question.pdf.json  V3_README.md  codecov.yml  entrypoint.sh  index.html  latest  mkdocs.yml  prod_requirements.txt  pyproject.toml  pyrightconfig.json  radar_chart.py  requirements-deploy.txt  requirements.txt  ruff.toml  search.html  setup.py  test_PdfWrapper.py  test_build_widgets.py  versions.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
PyPDFForm/: PyPDFForm.py  __init__.py  adapter.py  annotation.py  ap.py  cli_entry.py  compression.py  constants.py  coordinate.py  core.py  deprecation.py  egress.py  element.py  exceptions.py  filler.py  font.py  hooks.py  image.py  patterns.py  pdf.py  template.py  types.py  utils.py  watermark.py  wrapper.py
button_style/: index.html
coordinate/: index.html
dev_changes/: index.html
dev_doc/: index.html
dev_intro/: index.html
dev_release/: index.html
dev_test/: index.html
docs/: acro_js.md  annotation.md  api_reference.md  basic.md  button_style.md  coordinate.md  dev_changes.md  dev_doc.md  dev_intro.md  dev_release.md  dev_test.md  draw.md  examples.md  fill.md  font.md  index.md  inspect.md  install.md  prepare.md  simple_fill.md  style.md  utils.md
draw/: index.html
examples/: draw_image.py  draw_text.py  fill_customized_elements.py  fill_font.py  fill_global_font_size_color.py  fill_images.py  fill_sejda.py  fill_text_offset.py  fill_text_wrap.py  merge.py  simple_fill.py  simple_fill_editable.py  simple_fill_radio.py
fill/: index.html
font/: index.html
inspect/: index.html
install/: index.html
js_samples/: test_file_obj_scripts.js  test_file_path_scripts.js
json_samples/: test_bulk_create_fields.json  test_change_check_size.json  test_change_dropdown_choices.json  test_change_dropdown_choices_with_export_values.json  test_change_dropdown_font.json  test_change_dropdown_font_color.json  test_change_dropdown_font_size.json  test_change_field_editability.json  test_change_field_visibility.json  test_change_text_alignment.json  test_change_text_comb.json  test_change_text_font.json  test_change_text_font_color.json  test_change_text_font_size.json  test_change_text_max_length.json  test_change_text_max_length_comb_data.json  test_change_text_multiline.json  test_create_check.json  test_create_dropdown.json  test_create_dropdown_with_export_values.json  test_create_image.json  test_create_radio.json  test_create_sig.json  test_create_text.json  test_draw_circle.json  test_draw_ellipse.json  test_draw_image.json  test_draw_line.json  test_draw_rect.json  test_draw_text.json  test_extract_pages.json  test_fill_dropdown.json  test_fill_dropdown_via_str.json  test_fill_image.json  test_fill_image_ratio.json  test_fill_radio.json  test_fill_sig.json  test_fill_text_check.json  test_highlight_annotations.json  test_js_adapting.json  (+16 more)
overrides/: main.html
prepare/: index.html
scripts/: build.sh  bump_version.py  bump_version.sh  check_imports.sh  check_test_imports.sh  check_zlib.py  check_zlib.sh  clear_cache.sh  close_staled_issues.py  coverage.sh  create_compare.py  create_compare.sh  create_pdf_diff.py  create_release.py  create_release.sh  diff_widget.py  diff_widget.sh  doc_examples_type_check.py  format.sh  http_server.sh  linting.sh  new_pdf_samples.sh  nightly_tests.sh  open_pdf_diff.py  pdf_diffs.sh  run_cli.py  serve_docs.sh  serve_web_api.sh  test.sh
search/: search_index.json
simple_fill/: index.html
style/: index.html
tests/: .pylintrc  conftest.py  test_adobe_mode.py  test_adobe_mode_v3.py  test_bulk_create_fields.py  test_cli.py  test_create_widget.py  test_create_widget_v3.py  test_draw_elements.py  test_dropdown.py  test_dropdown_simple.py  test_dropdown_v3.py  test_extract_middleware_attributes.py  test_extract_values.py  test_fill_max_length_text_field.py  test_fill_max_length_text_field_simple.py  test_fill_max_length_text_field_v3.py  test_fill_method.py  test_font_widths.py  test_functional.py  test_functional_simple.py  test_functional_v3.py  test_generate_appearance_streams.py  test_js.py  test_need_appearances.py  test_paragraph.py  test_paragraph_simple.py  test_paragraph_v3.py  test_preview.py  test_signature.py  test_signature_v3.py  test_use_full_widget_name.py  test_widget_attr_trigger.py  test_widget_attr_trigger_v3.py
utils/: index.html
v4.0/: 404.html  index.html  sitemap.xml
v4.1/: 404.html  index.html  sitemap.xml
v4.2/: 404.html  index.html  sitemap.xml
v4.3/: 404.html  index.html  sitemap.xml
v4.4/: 404.html  index.html  sitemap.xml
v4.5/: 404.html  index.html  sitemap.xml
v4.6/: 404.html  index.html  sitemap.xml
v4.7/: 404.html  index.html  sitemap.xml
v4.8/: 404.html  index.html  sitemap.xml
v5.0/: 404.html  index.html  sitemap.xml
v5.1/: 404.html  index.html  sitemap.xml
v5.2/: 404.html  index.html  sitemap.xml
v5.3/: 404.html  index.html  sitemap.xml
v5.4/: 404.html  index.html  sitemap.xml
v5.5/: 404.html  index.html  sitemap.xml
yaml_samples/: test_bulk_create_fields.yaml  test_change_check_size.yaml  test_change_dropdown_choices.yaml  test_change_dropdown_choices_with_export_values.yaml  test_change_dropdown_font.yaml  test_change_dropdown_font_color.yaml  test_change_dropdown_font_size.yaml  test_change_field_editability.yaml  test_change_field_visibility.yaml  test_change_text_alignment.yaml  test_change_text_comb.yaml  test_change_text_font.yaml  test_change_text_font_color.yaml  test_change_text_font_size.yaml  test_change_text_max_length.yaml  test_change_text_max_length_comb_data.yaml  test_change_text_multiline.yaml  test_create_check.yaml  test_create_dropdown.yaml  test_create_dropdown_with_export_values.yaml  test_create_image.yaml  test_create_radio.yaml  test_create_sig.yaml  test_create_text.yaml  test_draw_circle.yaml  test_draw_ellipse.yaml  test_draw_image.yaml  (+29 more)
(+581 files in other folders)
