[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "PyPDFForm"
dynamic = ["version"]
description = "The Python library for PDF forms."
readme = "README.md"
authors = [
    {name = "Jinge Li"}
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "cryptography",
    "pillow",
    "pypdf",
    "reportlab",
]

[project.urls]
Homepage = "https://github.com/chinapandaman/PyPDFForm"
Documentation = "https://chinapandaman.github.io/PyPDFForm/"

[project.optional-dependencies]
dev = [
    "coverage",
    "jsonschema",
    "mkdocs",
    "pudb",
    "pylint",
    "pyright",
    "pytest",
    "requests",
    "ruff",
]

[tool.coverage.run]
omit = [
    "venv/*",
    "tests/*",
]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "C0103",
    "R0913",
    "R0902",
    "R0903",
    "R0914",
    "C0209",
    "C0123",
    "R0917",
    "C2801",
    "C0301",
]

[tool.ruff.lint]
select = [
    "A",
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "DTZ",
    "E",
    "EM",
    "F",
    "FLY",
    "G",
    "ISC",
    "ICN",
    "INT",
    "LOG",
    "N",
    "PIE",
    "PT",
    "PERF",
    "Q",
    "R",
    "RSE",
    "SLF",
    "SLOT",
    "SIM",
    "T10",
    "TRY",
    "TCH",
    "YTT",
    "W",
]
ignore = ["B009", "E501", "N999", "TC006"]

[tool.setuptools.dynamic]
version = {attr = "PyPDFForm.__version__"}

[tool.setuptools.packages.find]
include = ["PyPDFForm"]
