[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "PyPDFForm"
dynamic = ["version"]
description = "The Python library for PDF forms."
readme = "README.md"
authors = [{ name = "Jinge Li" }]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "cryptography>=47.0.0,<48.0.0",
    "fonttools>=4.62.1,<5.0.0",
    "pikepdf>=10.5.1,<11.0.0",
    "pillow>=12.2.0,<13.0.0",
    "pypdf>=6.10.1,<7.0.0",
    "reportlab>=4.5.0,<5.0.0",
]

[project.urls]
Homepage = "https://github.com/chinapandaman/PyPDFForm"
Documentation = "https://chinapandaman.github.io/PyPDFForm/"

[project.optional-dependencies]
cli = ["typer>=0.25.1,<1.0.0", "jsonschema>=4.26.0,<5.0.0"]
web_api = ["fastapi[standard]>=0.136.1,<1.0.0"]
dev = [
    "black>=26.3.1,<27.0.0",
    "coverage>=7.13.5,<8.0.0",
    "isort>=8.0.1,<9.0.0",
    "mike>=2.2.0,<3.0.0",
    "mkdocs>=1.6.1,<2.0.0",
    "mkdocs-material>=9.7.6,<10.0.0",
    "pudb>=2025.1.5,<2026.0.0",
    "pylint>=4.0.5,<5.0.0",
    "pyright>=1.1.409,<2.0.0",
    "pytest>=9.0.3,<10.0.0",
    "requests>=2.33.1,<3.0.0",
    "ruff>=0.15.12,<1.0.0",
]

[project.scripts]
pypdfform = "PyPDFForm.cli.entry:main"

[tool.coverage.run]
include = ["PyPDFForm/*"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "C0103",
    "R0913",
    "R0902",
    "R0903",
    "R0914",
    "C0209",
    "C0123",
    "R0917",
    "C2801",
    "C0301",
    "W0511",
    "R0801",
]

[tool.ruff.lint]
select = [
    "A",
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "DTZ",
    "E",
    "EM",
    "F",
    "FLY",
    "G",
    "ISC",
    "ICN",
    "INT",
    "LOG",
    "N",
    "PIE",
    "PT",
    "PERF",
    "Q",
    "R",
    "RSE",
    "SLF",
    "SLOT",
    "SIM",
    "T10",
    "TRY",
    "TCH",
    "YTT",
    "W",
    "UP007",
]
ignore = ["B009", "E501", "N999", "Q000", "TC006", "N816"]

[tool.pyright]
typeCheckingMode = "basic"
reportArgumentType = "none"
reportAttributeAccessIssue = "none"
reportIndexIssue = "none"
reportOperatorIssue = "none"
reportGeneralTypeIssues = "none"
reportOptionalMemberAccess = "error"
reportPossiblyUnboundVariable = "error"
reportUnusedImport = "error"
reportIncompatibleMethodOverride = "error"
reportMissingSuperCall = "error"
reportPrivateUsage = "error"
reportSelfClsParameterName = "error"
reportReturnType = "error"
reportAssignmentType = "error"
reportOptionalSubscript = "error"

[tool.setuptools.dynamic]
version = { attr = "PyPDFForm.__version__" }

[tool.setuptools.packages.find]
include = ["PyPDFForm*"]

[tool.pytest.ini_options]
markers = [
    "posix_only",   # mainly because of zlib vs zlib-ng
    "cli_test",
    "web_api_test",
]
